train and val csv

--- a/vegnet_annotations/merge-csvs.ipynb
+++ b/vegnet_annotations/merge-csvs.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "# Example usage:\n",
     "input_folder = './separate_annots/'\n",
-    "output_file = './vegnet-annots.csv'\n",
+    "output_file = './vegnet-annots-all.csv'\n",
     "merge_and_shuffle_csv_files(input_folder, output_file)\n"
    ]
   },
