--- a/yolo/yolov8_mod.ipynb
+++ b/yolo/yolov8_mod.ipynb
@@ -206,10 +206,10 @@
     "import os\n",
     "\n",
     "print(os.getcwd())\n",
-    "model_name = 'yolov8s'\n",
+    "model_name = 'yolov8l'\n",
     "exp_name = 'original_from_pt'\n",
-    "model = YOLO(f'./{model_name}.yaml')\n",
-    "model.load(f'./{model_name}.pt')  # build from YAML and transfer weights\n",
+    "model = YOLO('yolov8.yaml')\n",
+    "model.load(f'{model_name}.pt')  # build from YAML and transfer weights\n",
     "# print(model)\n",
     "\n",
     "results = model.train(\n",
@@ -258,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
