--- a/yolo/yolov8_mod.ipynb
+++ b/yolo/yolov8_mod.ipynb
@@ -208,7 +208,7 @@
     "print(os.getcwd())\n",
     "model_name = 'yolov8l'\n",
     "exp_name = 'original_from_pt'\n",
-    "model = YOLO('yolov8.yaml')\n",
+    "model = YOLO(f'./{model_name}.yaml')\n",
     "model.load(f'{model_name}.pt')  # build from YAML and transfer weights\n",
     "# print(model)\n",
     "\n",
