--- a/yolo/yolov8_mod.ipynb
+++ b/yolo/yolov8_mod.ipynb
@@ -207,7 +207,7 @@
     "\n",
     "print(os.getcwd())\n",
     "model_name = 'yolov8l'\n",
-    "exp_name = 'original_from_pt'\n",
+    "exp_name = 'original_pt'\n",
     "model = YOLO(f'./{model_name}.yaml')\n",
     "model.load(f'{model_name}.pt')  # build from YAML and transfer weights\n",
     "# print(model)\n",
@@ -237,8 +237,8 @@
     ")\n",
     "\n",
     "print(results)\n",
-    "path = model.export(format=\"onnx\")  # export the model to ONNX format\n",
-    "print(path)"
+    "# path = model.export(format=\"onnx\")  # export the model to ONNX format\n",
+    "# print(path)"
    ]
   }
  ],
